register fixed, still with some errors

--- a/register.html
+++ b/register.html
@@ -62,7 +62,7 @@
             <input id= "weight"  type="number" min= "40" max= "200" placeholder="Weight"  />
         </div>
         <div class="formElement">
-            <input id= "hieght"  type="number" min= "100" max="250" placeholder="height"  />
+            <input id= "height"  type="number" min= "100" max="250" placeholder="height"  />
         </div>
         <div class="formElement">
             <p>Activity</p>
