--- a/register.html
+++ b/register.html
@@ -12,10 +12,14 @@
 </head>
 <body>
     <div  class="logo">
-        <img src="img/logo3.png" class="logo2"id="logo">
+        <img src="img/logo3.png" class="logo2"id="logo" style="margin: 50px 0">
     </div>
 
     <div class="register_form">
+
+        <h2>Register</h2>
+
+
 
         
         <div class="formElement2">
@@ -38,7 +42,7 @@
             <p class="form_label">Confirm Password </p>
             <input id= "passwordConf"  type="password" placeholder="..."  />
         </div>
-        <div>
+        <div class="formElement2">
 			<p class="form_label">Country</p>
 			<select id= "country" name="default" class="default">
 				<option value="0"> Select a country.. </option>
@@ -61,25 +65,25 @@
         </div>
         <div class="formElement2">
             <p class="form_label">Age</p>
-            <input id= "age"  type="number" min= "15" max= "99" placeholder="Age"  />
+            <input class="rnumber" id= "age"  type="number" min= "15" max= "99" placeholder="Age"  />
         </div>
         <div class="formElement2">
             <p class="form_label">Gender </p>
-            <input id= "gender1"  type="radio" name= "gender" value= "Male"/>Male <br>
-            <input id= "gender2"  type="radio" name= "gender" value= "Female"/>Female<br>    
+            <input id= "gender1"  type="radio" name= "gender" value= "Male"/> <label for="gender1" class="pntr">Male</label>  &nbsp;&nbsp;&nbsp;
+            <input id= "gender2"  type="radio" name= "gender" value= "Female"/> <label for="gender2" class="pntr">Female</label>   
         </div>
         <div class="formElement2">
             <p class="form_label">Weight</p>
-            <input id= "weight"  type="number" min= "40" max= "200" placeholder="Weight"  />
+            <input class="rnumber" id= "weight"  type="number" min= "40" max= "200" placeholder="KG"  />
         </div>
         <div class="formElement2">
             <p class="form_label">Height</p>
-            <input id= "hieght"  type="number" min= "100" max="250" placeholder="height"  />
+            <input class="rnumber" id= "hieght"  type="number" min= "100" max="250" placeholder="CM"  />
         </div>
         <div class="formElement2">
             <p class="form_label">Activity</p>
-            <select id="#activity">
-            <option value = "0"> Select a Physical Activity</option>
+            <select id="#activity" name="default" class="default">
+            <option value = "0">Day activity</option>
             <option value = "Jogging">Jogging</option>
             <option value = "Basketball">Basketball</option>
             <option value = "Swimming">Swimming</option>
@@ -87,7 +91,7 @@
         </div>
         <div class="formElement2">
             <p class="form_label">Goal</p>
-            <select id="#goal">
+            <select id="#goal" name="default" class="default">
             <option value = "0"> Select your Goal</option>
             <option value = "keep">Keep weight</option>
             <option value = "gain">Gain weight</option>
