--- a/profile_added.html
+++ b/profile_added.html
@@ -7,7 +7,7 @@
         <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
         
          <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" >
-        <script src="js/profile.js" type="text/javascript"> </script>    
+<script src="js/profile.js" type="text/javascript"> </script>
     </head>
     <body>
         <div id="mainContainer">
@@ -43,33 +43,24 @@
                                 <a href="profile.html" class="selected">
                                     <img class="img_profile" src="img/person.png">
                                 </a>
-                                <a href="profile_calendar.html">
+                                <a href="profile_caledar.html">
                                     <img class="img_profile" src="img/calendar.png">
                                 </a>
                                 <a href="profile_meal.html">
                                     <img class="img_profile" src="img/meal.png">
                                 </a>
-                                <a href="profile_fav.html">
+                                <a href="profile_fav">
                                     <img class="img_profile" src="img/star.png">
                                 </a>
-                                <a href="profile_add.html">
+                                <a href="profile_add">
                                     <img class="img_profile" src="img/add.png">
                                 </a>
                            </nav>
                        </div>
 
                        <div class="profile_content">
-                            <h4>Nombre</h4><p  id="nombre"></p>
-                            <h4>Apellido</h4><p  id="apellido"></p>
-                            <h4>Username</h4><p  id="username"></p>
-                            <h4>Email</h4><p  id="email"></p>
-                            <h4>Cuntry</h4><p  id="country"></p>
-                            <h4>Gender</h4><p  id="gender"></p>
-                            <h4>Age</h4><p  id="age"></p>
-                            <h4>Weight</h4><p  id="weight"></p>
-                            <h4>Height</h4><p  id="height"></p>
-                            <h4>Activity</h4><p  id="activity"></p>
-                            <h4>Goal</h4><p  id="goal"></p>                               
+
+                               
                         </div>
 
                        <!--  <div id="my_selector">
