--- a/register.html
+++ b/register.html
@@ -23,9 +23,13 @@
 
         
         <div class="formElement2">
-            <p class="form_label">Complete name </p>
+            <p class="form_label">First Name </p>
             <input id= "firstName"  type="text" placeholder="..."  />
-        </div>     
+        </div>  
+        <div class="formElement2">
+            <p class="form_label">Last Name  </p>
+            <input id= "lastName"  type="text" placeholder="..."  />
+        </div>      
          <div  class="formElement2">
             <p class="form_label">Username </p>
             <input id="username"  type="text" placeholder="..." />
@@ -78,20 +82,20 @@
         </div>
         <div class="formElement2">
             <p class="form_label">Height</p>
-            <input class="rnumber" id= "hieght"  type="number" min= "100" max="250" placeholder="CM"  />
+            <input class="rnumber" id= "height"  type="number" min= "100" max="250" placeholder="CM"  />
         </div>
         <div class="formElement2">
             <p class="form_label">Activity</p>
-            <select id="#activity" name="default" class="default">
-            <option value = "0">Day activity</option>
-            <option value = "Jogging">Jogging</option>
-            <option value = "Basketball">Basketball</option>
-            <option value = "Swimming">Swimming</option>
+            <select id="activity" name="default" class="default">
+                <option value = "0">Day activity</option>
+                <option value = "Jogging">Jogging</option>
+                <option value = "Basketball">Basketball</option>
+                <option value = "Swimming">Swimming</option>
             </select>
         </div>
         <div class="formElement2">
             <p class="form_label">Goal</p>
-            <select id="#goal" name="default" class="default">
+            <select id="goal" name="default" class="default">
             <option value = "0"> Select your Goal</option>
             <option value = "keep">Keep weight</option>
             <option value = "gain">Gain weight</option>
