--- a/profile copia.html
+++ b/profile copia.html
@@ -7,13 +7,13 @@
         <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
         
          <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" >
-        <script src="js/profile.js" type="text/javascript"> </script>    
+<!--         <script src="js/home.js" type="text/javascript"> </script>-->    
     </head>
     <body>
         <div id="mainContainer">
             <div class="pageHeader">
             <ul class="menu_header">
-                <li><img src="img/profile.jpg" class="imgPro"><a href="profile.html" id= "usName">Usuario </a>|</li>
+                <li><img src="img/profile.jpg" class="imgPro"><a href="profile.html">Usuario </a>|</li>
                 <li><a href="login.html"> Log out</a></li>
             </ul>
                 
@@ -29,7 +29,7 @@
                     <div class="box">
                       <div class="container-4">
                         <input type="search" id="search" placeholder="Search..." />
-                        <button class="icon" id= "searchBtn"><i class="fa fa-search"></i></button>
+                        <button class="icon"><i class="fa fa-search"></i></button>
                       </div>
                     </div>
                 </ul>
@@ -43,16 +43,16 @@
                                 <a href="profile.html" class="selected">
                                     <img class="img_profile" src="img/person.png">
                                 </a>
-                                <a href="profile_calendar.html">
+                                <a href="profile_caledar.html">
                                     <img class="img_profile" src="img/calendar.png">
                                 </a>
                                 <a href="profile_meal.html">
                                     <img class="img_profile" src="img/meal.png">
                                 </a>
-                                <a href="profile_fav.html">
+                                <a href="profile_fav">
                                     <img class="img_profile" src="img/star.png">
                                 </a>
-                                <a href="profile_add.html">
+                                <a href="profile_add">
                                     <img class="img_profile" src="img/add.png">
                                 </a>
                            </nav>
